<resources>
    <string name="app_name">Popular Movies</string>
    <string name="most_popular">Most popular</string>
    <string name="highest_rated">Highest rated</string>
    <string name="error_message">An error has occurred.</string>
    <string name="detail_error_message">Movie data not available</string>
    <string name="movie_picture_content_description">Movie Poster</string>
    <string name="title_label">Title:</string>
    <string name="rating_label">Rating:</string>
    <string name="release_date_label">Release date:</string>
    <string name="synopsis_label">Synopsis:</string>
    <string name="currently_unavailable">Currently unavailable</string>
    <string name="no_internet">You are not connected to the internet</string>
    <string name="poster_for">Poster for </string>
    <string name="is_currently_unavailable"> is currently unavailable</string>
    <string name="nothing">nothing</string>
</resources>
