<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/movie_poster_detail_iv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_picture_content_description"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/movie_poster_unavailable_detail_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/movie_poster_detail_iv"
                app:layout_constraintBottom_toBottomOf="@id/movie_poster_detail_iv"
                android:textSize="24sp"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_label"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_poster_detail_iv"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/title_detail_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/barrier"
                app:layout_constraintTop_toTopOf="@+id/title_label"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/rating_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_label"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_detail_tv"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/rating_detail_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/barrier"
                app:layout_constraintTop_toTopOf="@+id/rating_label"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/release_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date_label"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating_detail_tv"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/release_date_detail_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/barrier"
                app:layout_constraintTop_toTopOf="@+id/release_date_label"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/synopsis_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/synopsis_label"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/release_date_detail_tv"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/synopsis_detail_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/barrier"
                app:layout_constraintTop_toTopOf="@+id/synopsis_label"
                android:padding="4dp"/>

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="title_label,rating_label,release_date_label,synopsis_label" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>